--- a/mongo-express.yaml
+++ b/mongo-express.yaml
@@ -15,20 +15,37 @@ spec:
         app: mongo-express
     spec:
       containers:
-      - name: mongo-express
+      - name : mongo-express
         image: mongo-express
         ports:
-        - containersPort: 8081
+        - containerPort: 8081
         env:
         - name: ME_CONFIG_MONGODB_ADMINUSERNAME
           valueFrom:
             secretKeyRef:
               name: mongodb-secret
-              key: mongo-root-username
+              key: mongo_root_username
         - name: ME_CONFIG_MONGODB_ADMINPASSWORD
           valueFrom:
             secretKeyRef:
               name: mongodb-secret
-              key: mongo-root-password
+              key: mongo_root_password
         - name: ME_CONFIG_MONGODB_SERVER
-          value: 
+          valueFrom:
+            configMapKeyRef:
+              name: mongodb-configmap
+              key: database_url
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongo-express-service
+spec:
+  selector:
+    app: mongo-express
+  type: LoadBalancer
+  ports:
+    - protocol: TCP
+      port: 8081
+      targetPort: 8081
+      nodePort: 30000
