--- a/mongodb.yaml
+++ b/mongodb.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongodb-depl
+  name: mongodb-deployment
   labels:
     app: mongodb
 spec:
@@ -24,12 +24,12 @@ spec:
           valueFrom:
             secretKeyRef:
               name: mongodb-secret
-              key: mongo-root-username
+              key: mongo_root_username
         - name: MONGO_INITDB_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
               name: mongodb-secret
-              key: mongo-root-password
+              key: mongo_root_password
 ---
 apiVersion: v1
 kind: Service
