--- a/srcs/phpmyadmin/nginx.conf
+++ b/srcs/phpmyadmin/nginx.conf
@@ -5,16 +5,13 @@ http
 	server 
 	{
 
-		listen 5000 ssl;
+		listen 5000;
 		# Permit to listen on IPv6 address
-		listen [::]:5000 ssl;
+		listen [::]:5000;
 
 		# domain name
 		server_name harlock.com www.harlock.com;
 
-		ssl_certificate		/etc/nginx/cert.crt;
-		ssl_certificate_key	/etc/nginx/cert.key;
-		
 		# website's path
 		root /data/www/phpmyadmin;
 
