--- a/srcs/phpmyadmin/Dockerfile
+++ b/srcs/phpmyadmin/Dockerfile
@@ -1,29 +1,53 @@
-FROM alpine:3.13.2
+FROM alpine:3.13
 
 RUN apk update \
 && apk add vim \
 && apk add openssl \
-&& apk add nginx
+&& apk add nginx \
+&& apk add openrc \
+&& apk add lighttpd \
+php7-common \
+php7-iconv \
+php7-json \
+php7-gd \
+php7-curl \
+php7-xml \
+php7-mysqli \
+php7-imap \
+php7-cgi \
+fcgi php7-pdo \
+php7-pdo_mysql \
+php7-soap \
+php7-xmlrpc \
+php7-posix \
+php7-mcrypt \
+php7-gettext \
+php7-ldap \
+php7-ctype \
+php7-dom
+
+
+COPY lighttpd.conf /etc/lighttpd/lighttpd.conf
+#
+RUN mkdir -p /run/openrc \
+&& touch /run/openrc/softlevel
 
 # This repository is necessary to start nginx, however it doesn't exixt on alpine image
 RUN mkdir -p /run/nginx
 
-RUN mkdir -p /data/www/phpmyadmin
+RUN mkdir -p /usr/share/webapps
 
-# Generate a SSL key
-RUN openssl req -x509 \
--nodes \
--days 365 \
--newkey rsa:2048 \
--keyout /etc/nginx/cert.key \
--out	/etc/nginx/cert.crt \
--subj "/C=FR/ST=Paris/L=Paris/O=42 School/OU=harlock/CN=localhost"
+COPY phpmyadmin /usr/share/webapps/phpmyadmin
 
-COPY index.html /data/www/phpmyadmin/index.html
+RUN chmod -R 777 /usr/share/webapps
 
 COPY nginx.conf /etc/nginx/nginx.conf
 
-COPY phpmyadmin /tmp/phpmyadmin
+COPY init_php.sh /tmp/init_php.sh
+
+ENTRYPOINT /tmp/init_php.sh
+
+RUN chmod 777 /tmp/init_php.sh
 
 # Start nginx in an infinity loop
 #ENTRYPOINT nginx -g "daemon off;"
