--- a/srcs/phpmyadmin/Dockerfile
+++ b/srcs/phpmyadmin/Dockerfile
@@ -1,54 +1,34 @@
 FROM alpine:3.13
 
-RUN apk update \
-&& apk add vim \
-&& apk add openssl \
-&& apk add nginx \
-&& apk add openrc \
-&& apk add lighttpd \
-php7-common \
-php7-iconv \
-php7-json \
-php7-gd \
-php7-curl \
-php7-xml \
-php7-mysqli \
-php7-imap \
-php7-cgi \
-fcgi php7-pdo \
-php7-pdo_mysql \
-php7-soap \
-php7-xmlrpc \
-php7-posix \
-php7-mcrypt \
-php7-gettext \
-php7-ldap \
-php7-ctype \
-php7-dom
+RUN apk update
 
+# nginx config
 
-COPY lighttpd.conf /etc/lighttpd/lighttpd.conf
-#
-RUN mkdir -p /run/openrc \
-&& touch /run/openrc/softlevel
+RUN apk add nginx && \
+apk add vim && \
+apk add wget && \
+apk add openrc
 
-# This repository is necessary to start nginx, however it doesn't exixt on alpine image
-RUN mkdir -p /run/nginx
+RUN apk add php7-fpm php7-mcrypt php7-soap php7-openssl php7-gmp php7-pdo_odbc php7-json php7-dom php7-pdo php7-zip php7-mysqli php7-sqlite3 php7-apcu php7-pdo_pgsql php7-bcmath php7-gd php7-odbc php7-pdo_mysql php7-pdo_sqlite php7-gettext php7-xmlreader php7-xmlrpc php7-bz2 php7-iconv php7-pdo_dblib php7-curl php7-ctype php7-mbstring php7-gettext php7-session
 
-RUN mkdir -p /usr/share/webapps
+RUN mkdir -p /run/openrc && \
+touch /run/openrc/softlevel
 
-COPY phpmyadmin /usr/share/webapps/phpmyadmin
-
-RUN chmod -R 777 /usr/share/webapps
+RUN openrc >/dev/null 2>&1
 
 COPY nginx.conf /etc/nginx/nginx.conf
 
-COPY init_php.sh /tmp/init_php.sh
+RUN mkdir -p /run/nginx
 
-ENTRYPOINT /tmp/init_php.sh
+WORKDIR /var/www/localhost/ 
 
-RUN chmod 777 /tmp/init_php.sh
+RUN wget -q http://files.directadmin.com/services/all/phpMyAdmin/phpMyAdmin-5.0.2-all-languages.tar.gz && \
+    tar -zxvf phpMyAdmin-5.0.2-all-languages.tar.gz && rm phpMyAdmin-5.0.2-all-languages.tar.gz  && \
+    mv phpMyAdmin-5.0.2-all-languages phpmyadmin && \
+    chmod -R 777 /var/www/localhost/phpmyadmin/
 
-# Start nginx in an infinity loop
-#ENTRYPOINT nginx -g "daemon off;"
-#ENTRYPOINT ["./path/nginx"] ["-g"] ["daemon off;"]
+COPY config.inc.php /var/www/localhost/phpmyadmin/
+
+COPY init.sh tmp/init.sh
+
+ENTRYPOINT sh ./tmp/init.sh
