--- a/srcs/phpmyadmin/nginx.conf
+++ b/srcs/phpmyadmin/nginx.conf
@@ -1,26 +1,29 @@
-events {}
-
-http
+events
 {
-	server 
-	{
-
-		listen 5000;
-		# Permit to listen on IPv6 address
-		listen [::]:5000;
-
-		# domain name
-		server_name harlock.com www.harlock.com;
-
-		# website's path
-		root /data/www/phpmyadmin;
-
-		# html file
-		index index.html;
-
-	}
-
-
-
 }
 
+http {
+
+server {
+            listen 5000;
+            listen [::]:5000;
+
+			server_name		localhost;
+
+
+            root                    /var/www/localhost/phpmyadmin;
+            index                   index.php;
+
+            error_page 497 https://$host:5000$request_uri;
+            
+            location / {
+		        try_files $uri $uri/ /index.php$is_args$args;
+            }
+            
+			location ~ \.php$ {
+                fastcgi_pass    127.0.0.1:9000;
+		        fastcgi_index   index.php;
+                include         fastcgi.conf;
+	        }
+        } 
+}
