--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -7,7 +7,7 @@ http
 
 		listen 80;
 		# Permit to listen on IPv6 address
-		listen [::]:80 ssl;
+		listen [::]:80;
 
 		# redirect port 80 to port 443 ssl
 		return 301 https://$host$request_uri;
@@ -26,16 +26,22 @@ http
 		
 		# website's path
 		root /data/www;
-
+		
 		# html file
 		index index.html;
 
+		error_page 497 https://$host:443$request_uri;
 
 		# redirection type 307 to wordpress
-		#location /wordpress
-		#{
-		#	return 307 https://$host:5050;
-		#}
+#		location /wordpress
+#		{
+#			return 307 https://$host:5050;
+#		}
+
+#		location /phpmyadmin/ 
+#		{
+ #           		proxy_pass		https://phpmyadmin:5000/;
+#           	}
 
 	}
 
