--- a/srcs/nginx/nginx-depl.yaml
+++ b/srcs/nginx/nginx-depl.yaml
@@ -26,6 +26,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-service
+  annotations:
+    metallb.universe.tf/allow-shared-ip : shared
 spec:
   selector:
     app: nginx-depl
@@ -38,3 +40,4 @@ spec:
       protocol: TCP
       port: 443
       targetPort: 443
+  type: LoadBalancer
