--- a/srcs/phpmyadmin/php-depl.yaml
+++ b/srcs/phpmyadmin/php-depl.yaml
@@ -25,6 +25,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: php-service
+  annotations:
+    metallb.universe.tf/allow-shared-ip : shared
 spec:
   selector:
     app: php-depl
@@ -33,3 +35,4 @@ spec:
       protocol: TCP
       port: 5000
       targetPort: 5000
+  type: LoadBalancer
