--- a/srcs/wordpress/wp-depl.yaml
+++ b/srcs/wordpress/wp-depl.yaml
@@ -26,6 +26,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: wp-service
+  annotations:
+    metallb.universe.tf/allow-shared-ip : shared
 spec:
   selector:
     app: wp-depl
@@ -34,3 +36,4 @@ spec:
       protocol: TCP
       port: 5050
       targetPort: 5050
+  type: LoadBalancer
