--- a/srcs/mysql/mysql-volume.yaml
+++ b/srcs/mysql/mysql-volume.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: influxdb-data
+  name: mysql-data
 spec:
   storageClassName: manual
   accessModes:
@@ -13,7 +13,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: influxdb-data
+  name: mysql-data
   labels:
     type: local
 spec:
