--- a/srcs/influxdb/Dockerfile
+++ b/srcs/influxdb/Dockerfile
@@ -12,6 +12,13 @@ touch /run/openrc/softlevel
 
 RUN openrc >/dev/null 2>&1
 
+# Telegraf configuration
+RUN apk add telegraf
+RUN mkdir -p /var/log/telegraf
+RUN touch /var/log/telegraf/telegraf.log
+COPY telegraf.conf /etc/telegraf/telegraf.conf
+RUN export TELEGRAF_CONFIG_PATH="/etc/telegraf/telegraf.conf"
+
 COPY influxdb.conf /etc/influxdb.conf
 
 COPY init.sh /tmp/init.sh
