--- a/srcs/phpmyadmin/nginx.conf
+++ b/srcs/phpmyadmin/nginx.conf
@@ -5,12 +5,13 @@ events
 http {
 
 server {
-            listen 5000;
-            listen [::]:5000;
+            listen 5000 ssl;
+            listen [::]:5000 ssl;
 
 			server_name		localhost;
 
-
+			ssl_certificate			/etc/certs/cert.pem;
+			ssl_certificate_key		/etc/private/key.pem;
             root                    /var/www/localhost/phpmyadmin;
             index                   index.php;
 
