--- a/srcs/wordpress/nginx.conf
+++ b/srcs/wordpress/nginx.conf
@@ -6,11 +6,13 @@ events
 http {
 
 server {
-            listen 5050;
-            listen [::]:5050;
+            listen 5050 ssl;
+            listen [::]:5050 ssl;
 
 			server_name		localhost;
 
+			ssl_certificate 		/etc/ssl/certs/nginx-selfsigned.crt;
+    		ssl_certificate_key 	/etc/ssl/private/nginx-selfsigned.key;
 
             root                    /var/www/localhost/wordpress;
             index                   index.php;
