--- a/srcs/ftps/Dockerfile
+++ b/srcs/ftps/Dockerfile
@@ -23,6 +23,13 @@ touch /run/openrc/softlevel
 
 RUN openrc >/dev/null 2>&1
 
+# Telegraf configuration
+RUN apk add telegraf
+RUN mkdir -p /var/log/telegraf
+RUN touch /var/log/telegraf/telegraf.log
+COPY telegraf.conf /etc/telegraf/telegraf.conf
+RUN export TELEGRAF_CONFIG_PATH="/etc/telegraf/telegraf.conf"
+
 COPY vsftpd.conf /etc/vsftpd.conf
 
 COPY init.sh /tmp/init.sh
