--- a/srcs/grafana/Dockerfile
+++ b/srcs/grafana/Dockerfile
@@ -15,6 +15,15 @@ RUN openssl req -x509 \
 -out	/etc/ssl/private/key.pem \
 -subj "/C=FR/ST=Paris/L=Paris/O=42 School/OU=harlock/CN=localhost"
 
+# Telegraf configuration
+RUN apk add telegraf
+RUN mkdir -p /var/log/telegraf
+RUN touch /var/log/telegraf/telegraf.log
+COPY telegraf.conf /etc/telegraf/telegraf.conf
+RUN export TELEGRAF_CONFIG_PATH="/etc/telegraf/telegraf.conf"
+
 COPY grafana.ini /etc/grafana.ini
 
-ENTRYPOINT /usr/sbin/grafana-server --homepath=/usr/share/grafana/
+COPY init.sh /tmp/init.sh
+
+ENTRYPOINT /tmp/init.sh
