--- a/srcs/mysql/Dockerfile
+++ b/srcs/mysql/Dockerfile
@@ -1,6 +1,5 @@
 FROM alpine:3.13
 
-
 # instaling packages
 RUN apk update
 
@@ -13,6 +12,13 @@ RUN mkdir -p /run/openrc && \
 touch /run/openrc/softlevel
 
 RUN openrc >/dev/null 2>&1
+
+# Telegraf configuration
+RUN apk add telegraf
+RUN mkdir -p /var/log/telegraf
+RUN touch /var/log/telegraf/telegraf.log
+COPY telegraf.conf /etc/telegraf/telegraf.conf
+RUN export TELEGRAF_CONFIG_PATH="/etc/telegraf/telegraf.conf"
 
 COPY init.sh /tmp/init.sh
 
