--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -21,9 +21,9 @@ http
 		# domain name
 		server_name harlock.com www.harlock.com;
 
-		ssl_certificate		/etc/nginx/cert.crt;
-		ssl_certificate_key	/etc/nginx/cert.key;
-		
+		ssl_certificate 		/etc/ssl/certs/nginx-selfsigned.crt;
+    	ssl_certificate_key 	/etc/ssl/private/nginx-selfsigned.key;
+
 		# website's path
 		root /data/www;
 		
