--- a/new/srcs/phpmyadmin/Dockerfile
+++ b/new/srcs/phpmyadmin/Dockerfile
@@ -7,7 +7,8 @@ RUN apk update
 RUN apk add vim && \
 apk add wget
 
-RUN apk add php7-fpm php7-mcrypt php7-soap php7-openssl php7-gmp php7-pdo_odbc php7-json php7-dom php7-pdo php7-zip php7-mysqli php7-sqlite3 php7-apcu php7-pdo_pgsql php7-bcmath php7-gd php7-odbc php7-pdo_mysql php7-pdo_sqlite php7-gettext php7-xmlreader php7-xmlrpc php7-bz2 php7-iconv php7-pdo_dblib php7-curl php7-ctype php7-mbstring php7-gettext php7-session
+# install php packages
+RUN apk add php7 php7-fpm php7-mysqli php7-mbstring php7-json php7-session php-sockets php7-common php7-opcache php7-zlib php7-curl php7-gd php7-cgi
 
 # openrc intallation
 RUN apk add openrc
@@ -19,15 +20,15 @@ RUN openrc >/dev/null 2>&1
 RUN apk add nginx
 RUN mkdir -p /run/nginx
 COPY default.conf /etc/nginx/http.d/default.conf
-#COPY phpmyadmin /var/www/phpmyadmin
 
 # PhpMyAdmin
 WORKDIR /var/www
 RUN wget -q http://files.directadmin.com/services/all/phpMyAdmin/phpMyAdmin-5.0.2-all-languages.tar.gz && \
     tar -zxvf phpMyAdmin-5.0.2-all-languages.tar.gz && rm phpMyAdmin-5.0.2-all-languages.tar.gz  && \
     mv phpMyAdmin-5.0.2-all-languages phpmyadmin && \
-    chmod -R 777 /var/www/phpmyadmin/
+    chmod -R 755 /var/www/phpmyadmin/
 COPY /config.inc.php /var/www/phpmyadmin/
+RUN chmod 644 ./phpmyadmin/config.inc.php
 
 #COPY config.inc.php /var/www/phpmyadmin/config.inc.php
 
