--- a/new/srcs/phpmyadmin/Dockerfile
+++ b/new/srcs/phpmyadmin/Dockerfile
@@ -1,60 +1,33 @@
-FROM alpine:3.13
+FROM alpine:3.13.2
 
 RUN apk update
-
-# nginx config
-
-RUN apk add vim && \
-apk add wget
-
-# install php packages
+RUN apk add wget
 RUN apk add php7 php7-fpm php7-mysqli php7-mbstring php7-json php7-session php-sockets php7-common php7-opcache php7-zlib php7-curl php7-gd php7-cgi
+RUN apk add nginx
+RUN apk add openssl
 
-# openrc intallation
-RUN apk add openrc
-RUN mkdir -p /run/openrc && \
-touch /run/openrc/softlevel
+
+RUN apk add --no-cache openrc
+RUN mkdir -p /run/openrc
+RUN touch /run/openrc/softlevel
 RUN openrc >/dev/null 2>&1
 
-# Installing and setup nginx
-RUN apk add nginx
+COPY ./default.conf /etc/nginx/conf.d/
 RUN mkdir -p /run/nginx
-COPY default.conf /etc/nginx/http.d/default.conf
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -subj '/C=FR/ST=75017/L=Paris/O=42/CN=thsembel' -keyout /etc/nginx/localhost.key -out /etc/nginx/localhost.crt >/dev/null 2>&1
 
-# PhpMyAdmin
-WORKDIR /var/www
+RUN apk add telegraf
+RUN mkdir -p etc/telegraf/ && mkdir -p /var/log/telegraf-log
+RUN touch /var/log/telegraf-log/telegraf.log
+COPY ./telegraf.conf /etc/telegraf/
+
+WORKDIR /var/www/localhost/ 
 RUN wget -q http://files.directadmin.com/services/all/phpMyAdmin/phpMyAdmin-5.0.2-all-languages.tar.gz && \
     tar -zxvf phpMyAdmin-5.0.2-all-languages.tar.gz && rm phpMyAdmin-5.0.2-all-languages.tar.gz  && \
     mv phpMyAdmin-5.0.2-all-languages phpmyadmin && \
-    chmod -R 755 /var/www/phpmyadmin/
-COPY /config.inc.php /var/www/phpmyadmin/
-RUN chmod 644 ./phpmyadmin/config.inc.php
+    chmod -R 777 /var/www/localhost/phpmyadmin/
+COPY /config.inc.php /var/www/localhost/phpmyadmin/
 
-#COPY config.inc.php /var/www/phpmyadmin/config.inc.php
-
-# SSL installation
-RUN apk add openssl
-RUN mkdir -p /etc/ssl/private && \
-mkdir -p /etc/ssl/certs
-RUN chmod 700 /etc/ssl/private && \
-chmod 700 /etc/ssl/certs
-RUN openssl req -x509 \
--nodes \
--days 365 \
--newkey rsa:2048 \
--keyout /etc/ssl/private/nginx-selfsigned.key \
--out	/etc/ssl/certs/nginx-selfsigned.crt \
--subj "/C=FR/ST=Paris/L=Paris/O=42 School/OU=harlock/CN=localhost"
-
-# Telegraf configuration
-#RUN apk add telegraf
-#RUN mkdir -p /var/log/telegraf
-#RUN touch /var/log/telegraf/telegraf.log
-#COPY telegraf.conf /etc/telegraf/telegraf.conf
-#RUN export TELEGRAF_CONFIG_PATH="/etc/telegraf/telegraf.conf"
-
-COPY init.sh tmp/init.sh
-
-ENTRYPOINT sh ./tmp/init.sh
-
+COPY ./start.sh tmp/start.sh
 EXPOSE 5000
+ENTRYPOINT sh ./tmp/start.sh
