--- a/new/srcs/mysql/mysql.yaml
+++ b/new/srcs/mysql/mysql.yaml
@@ -16,12 +16,19 @@ spec:
         app: mysql
     spec:
       containers:
-        - name: mysql
-          image: mysql-img
-          ports:
-            - containerPort: 3306
-              name: mysql
-          imagePullPolicy: Never
+      - name: mysql
+        image: mysql-img
+        ports:
+        - containerPort: 3306
+          name: mysql
+        imagePullPolicy: Never
+        volumeMounts:
+        - name: mysql-volume
+          mountPath: /var/lib/mysql
+      volumes:
+      - name: mysql-volume
+        persistentVolumeClaim:
+          claimName: mysql-volume
 ---
 apiVersion: v1
 kind: Service
