--- a/new/srcs/nginx/default.conf
+++ b/new/srcs/nginx/default.conf
@@ -19,14 +19,13 @@ server
 #	error_page 497 https://$host:443$request_uri;
 
                 # redirection type 307 to wordpress
-#               location /wordpress
-#               {
-#                       return 307 https://$host:5050;
-#               }
+               location /wordpress
+               {
+                       return 307 https://$host:5050;
+               }
 
 #               location /phpmyadmin/
 #               {
 #                      proxy_pass              https://phpmyadmin:5000/;
 #               }
 }
-
