--- a/new/srcs/nginx/telegraf.conf
+++ b/new/srcs/nginx/telegraf.conf
@@ -15,7 +15,7 @@
 
   precision = ""
 
-  hostname = "mysql"
+  hostname = "nginx-service"
   omit_hostname = false
   debug = true
   quiet = false
