--- a/new/srcs/grafana/Dockerfile
+++ b/new/srcs/grafana/Dockerfile
@@ -16,18 +16,14 @@ RUN openssl req -x509 \
 -subj "/C=FR/ST=Paris/L=Paris/O=42 School/OU=harlock/CN=localhost"
 
 # Telegraf configuration
-RUN apk add telegraf
-RUN mkdir -p /var/log/telegraf
-RUN touch /var/log/telegraf/telegraf.log
-COPY telegraf.conf /etc/telegraf/telegraf.conf
-RUN export TELEGRAF_CONFIG_PATH="/etc/telegraf/telegraf.conf"
+#RUN apk add telegraf
+#RUN mkdir -p /var/log/telegraf
+#RUN touch /var/log/telegraf/telegraf.log
+#COPY telegraf.conf /etc/telegraf/telegraf.conf
+#RUN export TELEGRAF_CONFIG_PATH="/etc/telegraf/telegraf.conf"
 
 COPY grafana.ini /etc/grafana.ini
 
 COPY init.sh /tmp/init.sh
 
-RUN chmod 755 /tmp/init.sh
-
 ENTRYPOINT /tmp/init.sh
-
-EXPOSE 3000
