--- a/new/srcs/grafana/Dockerfile
+++ b/new/srcs/grafana/Dockerfile
@@ -11,18 +11,19 @@ RUN openssl req -x509 \
 -nodes \
 -days 365 \
 -newkey rsa:2048 \
--keyout /etc/ssl/certs/cert.pem \
--out	/etc/ssl/private/key.pem \
+-out /etc/ssl/certs/cert.pem \
+-keyout /etc/ssl/private/key.pem \
 -subj "/C=FR/ST=Paris/L=Paris/O=42 School/OU=harlock/CN=localhost"
 
 # Telegraf configuration
-#RUN apk add telegraf
-#RUN mkdir -p /var/log/telegraf
-#RUN touch /var/log/telegraf/telegraf.log
-#COPY telegraf.conf /etc/telegraf/telegraf.conf
-#RUN export TELEGRAF_CONFIG_PATH="/etc/telegraf/telegraf.conf"
+RUN apk add telegraf
+RUN mkdir -p /var/log/telegraf
+RUN touch /var/log/telegraf/telegraf.log
+COPY telegraf.conf /etc/telegraf/telegraf.conf
+RUN export TELEGRAF_CONFIG_PATH="/etc/telegraf/telegraf.conf"
 
-COPY grafana.ini /etc/grafana.ini
+RUN rm /usr/share/grafana/conf/sample.ini
+COPY grafana.ini /usr/share/grafana/conf/grafana.ini
 
 COPY init.sh /tmp/init.sh
 
