--- a/new/srcs/grafana/grafana.ini
+++ b/new/srcs/grafana/grafana.ini
@@ -460,7 +460,7 @@ admin_password = user42
 ;user =
 # If the password contains # or ; you have to wrap it with triple quotes. Ex """#password;"""
 ;password =
-cert_file = /etc/ssl/certs/cert.pem
+;cert_file = /etc/ssl/certs/cert.pem
 ;key_file =
 ;skip_verify = false
 ;from_address = admin@grafana.localhost
@@ -954,7 +954,7 @@ cert_file = /etc/ssl/certs/cert.pem
 ;user =
 # If the password contains # or ; you have to wrap it with triple quotes. Ex """#password;"""
 ;password =
-cert_file = /etc/ssl/certs/cert.pem
+;cert_file = /etc/ssl/certs/cert.pem
 ;key_file =
 ;skip_verify = false
 ;from_address = admin@grafana.localhost
