--- a/new/srcs/grafana/grafana.yaml
+++ b/new/srcs/grafana/grafana.yaml
@@ -2,8 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: grafana-deployment
+  labels:
+    app: grafana-depl
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: grafana-depl
