--- a/srcs/ftps/telegraf.conf
+++ b/srcs/ftps/telegraf.conf
@@ -15,7 +15,7 @@
 
   precision = ""
 
-  hostname = "grafana"
+  hostname = "ftps"
   omit_hostname = false
   debug = true
   quiet = false
@@ -29,6 +29,7 @@
   urls = ["http://influxdb:8086"]
 
   ## HTTP User-Agent
+  #user_agent = "telegraf_ki_k8s"
 
   ## The target database for metrics; will be created as needed.
   ## For UDP url endpoint database needs to be configured on server side.
@@ -36,6 +37,8 @@
 
   username = "harlock"
   password = "user42"
+
+  insecure_skip_verify = true
 
 [[inputs.cpu]]
   percpu = true
@@ -60,4 +63,8 @@
 [[inputs.system]]
 
 [[outputs.file]]
+#    files = ["stdout"] 
+#    data_format = "influx"
 [[inputs.kubernetes]]
+#    insecure_skip_verify = true
+#    url = "https://192.168.49.2:10250"
