--- a/srcs/grafana/grafana.yaml
+++ b/srcs/grafana/grafana.yaml
@@ -20,6 +20,14 @@ spec:
         ports:
           - containerPort: 3000
         imagePullPolicy: Never
+        livenessProbe:
+          exec:
+            command:
+            - /bin/sh
+            - -c
+            - ps -o comm | grep 'telegraf' && ps -o comm | grep 'grafana-server'
+          initialDelaySeconds: 30
+          periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
