--- a/srcs/influxdb/influxdb.yaml
+++ b/srcs/influxdb/influxdb.yaml
@@ -22,6 +22,14 @@ spec:
         ports:
         - containerPort: 8086
           name: influxdb
+        livenessProbe:
+          exec:
+            command:
+            - /bin/sh
+            - -c
+            - ps -o comm | grep 'telegraf' && ps -o comm | grep 'influxdb'
+          initialDelaySeconds: 30
+          periodSeconds: 10
         volumeMounts:
         - name: influxdb-volume
           mountPath: /var/lib/influxdb
