--- a/srcs/nginx/default.conf
+++ b/srcs/nginx/default.conf
@@ -16,16 +16,13 @@ server
 	root			/var/www;
 	index			index.html;
 
-#	error_page 497 https://$host:443$request_uri;
+	error_page 497 https://$host:443$request_uri;
 
-                # redirection type 307 to wordpress
                location /wordpress
                {
                        return 307 https://$host:5050;
                }
-
-#               location /phpmyadmin/
-#               {
-#                      proxy_pass              https://phpmyadmin:5000/;
-#               }
+		location /phpmyadmin/ {
+           		proxy_pass		https://phpmyadmin:5000/;
+            	}
 }
