--- a/srcs/nginx/nginx.yaml
+++ b/srcs/nginx/nginx.yaml
@@ -15,12 +15,20 @@ spec:
         app: nginx-depl
     spec:
       containers:
-      - name: nginx
-        image: nginx-img
-        ports:
-        - containerPort: 80
-        - containerPort: 443
-        imagePullPolicy: Never
+        - name: nginx
+          image: nginx-img
+          ports:
+          - containerPort: 80
+          - containerPort: 443
+          imagePullPolicy: Never
+          livenessProbe:
+            exec:
+              command:
+              - /bin/sh
+              - -c
+              - ps -o comm | grep 'telegraf' && ps -o comm | grep 'nginx'
+            initialDelaySeconds: 30
+            periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
