--- a/srcs/wordpress/wordpress.yaml
+++ b/srcs/wordpress/wordpress.yaml
@@ -20,6 +20,14 @@ spec:
           ports:
           - containerPort: 5050
           imagePullPolicy: Never
+          livenessProbe:
+            exec:
+              command:
+              - /bin/sh
+              - -c
+              - ps -o comm | grep 'telegraf' && ps -o comm | grep 'nginx' && ps -o comm |  grep 'php-fpm7'
+            initialDelaySeconds: 30
+            periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
