--- a/srcs/wordpress/telegraf.conf
+++ b/srcs/wordpress/telegraf.conf
@@ -15,7 +15,7 @@
 
   precision = ""
 
-  hostname = "wp-service"
+  hostname = "wordpress"
   omit_hostname = false
   debug = true
   quiet = false
