--- a/srcs/wordpress/wordpress.yaml
+++ b/srcs/wordpress/wordpress.yaml
@@ -32,7 +32,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: wp-service
+  name: wordpress
   annotations:
     metallb.universe.tf/allow-shared-ip : shared
 spec:
