--- a/srcs/grafana/grafana.ini
+++ b/srcs/grafana/grafana.ini
@@ -29,7 +29,7 @@
 #################################### Server ####################################
 [server]
 # Protocol (http, https, h2, socket)
-protocol = https
+protocol = http
 # The ip address to bind to, empty will bind to all interfaces
 ;http_addr =
 
