--- a/srcs/grafana/Dockerfile
+++ b/srcs/grafana/Dockerfile
@@ -6,15 +6,6 @@ RUN apk add grafana && \
 apk add openssl && \
 apk add vim
 
-# Generate a SSL key
-#RUN openssl req -x509 \
-#-nodes \
-#-days 365 \
-#-newkey rsa:2048 \
-#-out /etc/ssl/certs/cert.pem \
-#-keyout /etc/ssl/private/key.pem \
-#-subj "/C=FR/ST=Paris/L=Paris/O=42 School/OU=harlock/CN=localhost"
-
 # Telegraf configuration
 RUN apk add telegraf
 RUN mkdir -p /var/log/telegraf
@@ -22,7 +13,13 @@ RUN touch /var/log/telegraf/telegraf.log
 COPY telegraf.conf /etc/telegraf/telegraf.conf
 RUN export TELEGRAF_CONFIG_PATH="/etc/telegraf/telegraf.conf"
 
-COPY grafana.db /usr/share/grafana/data/grafana.db
+#COPY grafana.db /usr/share/grafana/data/grafana.db
+RUN rm -rf /usr/share/grafna
+COPY grafana.tar.gz /usr/share/grafana.tar.gz
+WORKDIR /usr/share
+RUN tar xzvf grafana.tar.gz
+RUN rm -rf grafana.tar.gz
+WORKDIR ../..
 RUN rm /usr/share/grafana/conf/sample.ini
 COPY grafana.ini /usr/share/grafana/conf/grafana.ini
 
