--- a/srcs/influxdb/telegraf.conf
+++ b/srcs/influxdb/telegraf.conf
@@ -14,7 +14,7 @@
   omit_hostname = false
 
 [[outputs.influxdb]]
-  urls = ["http://influxdb:8086"]
+  urls = ["http://localhost:8086"]
   database = "metrics"
   username = "harlock"
   password = "user42"
@@ -27,7 +27,7 @@
   report_active = false
 
 [[inputs.disk]]
-  ignore_fs = ["tmpfs", "devtmpfs", "devfs"]
+ignore_fs = ["tmpfs", "devtmpfs", "devfs", "iso9660", "overlay", "aufs", "squashfs"]
 
 [[inputs.diskio]]
 
